# hyprland-ctm-vibrance

./: .gitignore  .gitmodules  README.md
hyprland-build/: gen-pkgbuild.sh  remove-ctm-negative-values-check.patch
hyprland-vibrance/: .gitignore  Cargo.toml
hyprland-vibrance/arch-dist/: PKGBUILD
hyprland-vibrance/src/: main.rs
